--- a/资料汇总.md
+++ b/资料汇总.md
@@ -15,3 +15,7 @@
 我的github：https://github.com/jianglin05290712/cells-of-Android 有更新
 
 Android 6.0 huawei 6p nexus : fastboot img  https://pan.baidu.com/s/1G1risnbT0Usy_NL6VDbovQ
+
+### 2、基于代理的设备虚拟化技术及其应用
+
+#### 链接：http://www.xml-data.org/dzkj-nature/html/2017-6-883.htm
