--- a/资料汇总.md
+++ b/资料汇总.md
@@ -19,3 +19,11 @@ Android 6.0 huawei 6p nexus : fastboot img  https://pan.baidu.com/s/1G1risnbT0Us
 ### 2、基于代理的设备虚拟化技术及其应用
 
 #### 链接：http://www.xml-data.org/dzkj-nature/html/2017-6-883.htm
+
+### 3、An Open-Source ARM Virtualization System
+
+#### 链接：http://systems.cs.columbia.edu/projects/kvm-arm/
+
+### 4、Virtual Open Systems
+
+#### 链接：http://www.virtualopensystems.com
