--- a/资料汇总.md
+++ b/资料汇总.md
@@ -27,3 +27,9 @@ Android 6.0 huawei 6p nexus : fastboot img  https://pan.baidu.com/s/1G1risnbT0Us
 ### 4、Virtual Open Systems
 
 #### 链接：http://www.virtualopensystems.com
+
+### 基于anbox的云手机技术简介
+#### 链接：https://blog.csdn.net/v6543210/article/details/113692010
+
+### DockDroid
+#### 链接：https://github.com/DockDroid/openvmi
